--- a/SuperHeroSearch_App/SuperHeroSearch_App.csproj
+++ b/SuperHeroSearch_App/SuperHeroSearch_App.csproj
@@ -1,17 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Flurl" Version="3.0.2" />
     <PackageReference Include="HGUtils" Version="2.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SuperHeroSearch_App\SuperHeroSearch_App.csproj" />
     <ProjectReference Include="..\SuperHeroSearch_Common\SuperHeroSearch_Common.csproj" />
   </ItemGroup>
 
